<resources>

    <!--facebook-->
    <string name="facebook_app_id">250707362523649</string>
    <string name="fb_login_protocol_scheme">fb250707362523649</string>


    <string name="item_settings">Settings</string>
    <string name="item_languages">Language</string>
    <string name="item_about">About</string>

    <string name="app_name" translatable="false">Ranpeak</string>
    <string name="user_name">Name</string>
    <string name="user_country">Country</string>

    <string name="search_1_user">1 to 1</string>
    <string name="login">log in</string>

    <string name="user_login">login</string>
    <string name="user_password">password</string>
    <string name="user_username">username</string>

    <string name="registration">registration</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email or login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_login">This login is too short</string>
    <string name="error_exist_login">This login is used</string>
    <string name="error_exist_email">This email is used</string>

    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_weak_password">This password is too weak</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registration_button">Registration</string>
    <string name="title_activity_registration" translatable="false">Registration</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_country">Country</string>
    <string name="password">Password</string>
    <string name="login_registration">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="country">Country</string>
    <string name="country_picker">Click to select your country</string>
    <string name="log_out">Log out</string>
    <string name="splashscreenText">Ranpeak</string>
    <string name="choosedWrongCoutry">Choosed wrong country</string>
    <string name="invalidEmailOrPassword">Invalid email or password</string>
    <string name="next">Next</string>
    <string name="registration_name">Your name</string>
    <string name="registration_surname">Your surname</string>
    <string name="registration_email">Your email</string>
    <string name="registration_textView_name">Type your name:</string>
    <string name="registration_textView_surname">Type your surname:</string>
    <string name="registration_textView_email">Type your email address:</string>
    <string name="registration_textView_password">Create password:</string>
    <string name="registration_textView_username">Create yor username:</string>
    <string name="registration_textView_profile_info">This info will be shown on your profile:</string>
    <string name="error_password_doesnt_match">This password doesn\'t match</string>
    <string name="error_country_incorrect">Country is not correct</string>
    <string name="task_name">Type name of your task</string>
    <string name="task_description">Type description of your task</string>
    <string name="type_here">Type here</string>
    <string name="add_files">Select files to add to description</string>
    <string name="select_date">Click to set a deadline</string>
    <string name="select_date_below">Select deadline</string>
    <string name="select_lesson">Click to choose a lesson</string>
    <string name="select_lesson_below">Select lesson</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>


    <string name="profile">Profile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="email">Email</string>
    <string name="choose">Choose method</string>
    <string name="server_client_id">945886544031-bruik0k9lsujhmj90ln0sf4h1jhcbjbf.apps.googleusercontent.com </string>
    <string name="tab_free_task">Free Task</string>
    <string name="tab_item_my_task">My Task</string>


</resources>
