<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="50pt">

    <ImageView
        android:id="@+id/user_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30pt"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="TODO" />
    <EditText
        android:id="@+id/log_in_field"
        android:layout_width="100pt"
        android:layout_height="20pt"
        android:hint="@string/user_login"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/password_field"
        android:layout_width="100pt"
        android:layout_height="20pt"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:autofillHints="" />
    <Button
        android:id="@+id/log_in"

        android:layout_marginStart="20pt"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="161dp"
        android:onClick="ClickLogInLobby"
        android:text="@string/login"
        style="@style/TextView" />
    <Button
        android:id="@+id/register"

        android:layout_marginStart="15pt"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="161dp"
        android:onClick="ClickRegistration"
        android:text="@string/registration"
        style="@style/TextView" />
</LinearLayout>