<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_dark"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/IconInRegister"
        android:layout_width="80pt"
        android:layout_height="60pt"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="15pt"
        android:src="@mipmap/ic_launcher" />

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
    android:id="@+id/login_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:hint="@string/login_ragistration"
    android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_login"
        android:layout_alignEnd="@+id/login_login"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_below="@+id/login_password"
        android:layout_alignEnd="@+id/login_password"
        android:layout_alignParentStart="true"
        android:text="@string/action_sign_in" />

    <Button
        android:id="@+id/registration_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="40pt"
        android:onClick="ClickRegistration"
        android:text="@string/registration_button"
        android:textStyle="bold" />


</RelativeLayout>

</LinearLayout>